--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="carousel-content">
                 <h2>A Law Firm focused on Healthcare & Regulatory Compliance.</h2>
                 <p>Compliance Counsel for healthcare organizations.</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="#featured-services" class="btn-get-started scrollto">Learn More</a>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
               <div class="carousel-content">
                 <h2>Embedded Compliance Counsel</h2>
                 <p>Work with experienced compliance counsel to build an effective compliance program.</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="#featured-services" class="btn-get-started scrollto">Learn More</a>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
               <div class="carousel-content">
                 <h2>Embedded HIPAA Privacy Officer</h2>
                 <p>Build a Privacy Program and secure protected health information.</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="#featured-services" class="btn-get-started scrollto">Learn More</a>
               </div>
             </div>
           </div>
@@ -116,7 +116,7 @@
               <div class="carousel-content">
                 <h2>Embedded Auditor</h2>
                 <p>Due Dilligence.  Stress test your operations and avoid costly regulatory findings</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="#featured-services" class="btn-get-started scrollto">Learn More</a>
               </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
               <div class="carousel-content">
                 <h2>General Counsel Package</h2>
                 <p>Ask general business and healthcare law questions. Contract drafting, negotiation and review. Great for small to mid-size organizations and practices.</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                <a href="#featured-services" class="btn-get-started scrollto">Learn More</a>
               </div>
             </div>
           </div>
@@ -182,8 +182,8 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Unique Offerings</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h3>Comprehensive Packaged Services</h3>
+          <p>Build your compliance program and keep stay compliant as laws and regulations evolve.</p>
         </header>
 
         <div class="row about-cols">
@@ -238,7 +238,7 @@
 
         <header class="section-header wow fadeInUp">
           <h3>Traditional Services</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus, ad pro quaestio laboramus. Ei ubique vivendum pro. At ius nisl accusam lorenta zanos paradigno tridexa panatarel.</p>
+          <p>Add legal and regulatory support to your practice or company.</p>
         </header>
 
         <div class="row">
@@ -282,8 +282,8 @@
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action" class="wow fadeIn">
       <div class="container text-center">
-        <h3>White Paper</h3>
-        <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3>Outsourcing Compliance & Legal</h3>
+        <p> Learn about best practices and how you can save money and lessen organizational risk by outsourcing Compliance and Legal functions.</p>
         <a class="cta-btn" href="#">Download Here</a>
       </div>
     </section><!-- End Call To Action Section -->
@@ -530,7 +530,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Our Clients Section ======= -->
-    <section id="clients" class="wow fadeInUp">
+    <!--section id="clients" class="wow fadeInUp">
       <div class="container">
 
         <header class="section-header">
