added about sec under services sec

--- a/index.html
+++ b/index.html
@@ -279,6 +279,63 @@
       </div>
     </section><!-- End Services Section -->
 
+
+    <!-- ======= About Us Section ======= -->
+    <section id="about">
+      <div class="container">
+
+        <header class="section-header">
+          <h3>Comprehensive Packaged Services</h3>
+          <p>Build your compliance program and keep stay compliant as laws and regulations evolve.</p>
+        </header>
+
+        <div class="row about-cols">
+
+          <div class="col-md-4 wow fadeInUp">
+            <div class="about-col">
+              <div class="img">
+                <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
+                <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
+              </div>
+              <h2 class="title"><a href="#">Compliance Counsel Package</a></h2>
+              <p>
+                A Compliance Attorney available to stand up an effective compliance program and advice on a host of regulatory issues.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="about-col">
+              <div class="img">
+                <img src="assets/img/about-plan.jpg" alt="" class="img-fluid">
+                <div class="icon"><i class="ion-ios-list-outline"></i></div>
+              </div>
+              <h2 class="title"><a href="#">Internal Auditor Package</a></h2>
+              <p>
+                Audit professionals capable of identifying gaps and ensuring you avoid costly regulatory findings and government investigations.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="about-col">
+              <div class="img">
+                <img src="assets/img/about-vision.jpg" alt="" class="img-fluid">
+                <div class="icon"><i class="ion-ios-eye-outline"></i></div>
+              </div>
+              <h2 class="title"><a href="#">General Counsel Package</a></h2>
+              <p>
+                Enjoy the benefit of a General Counsel On-Demand.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End About Us Section -->
+
+
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action" class="wow fadeIn">
       <div class="container text-center">
