Updated about us text

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Comprehensive Packaged Services</h3>
-          <p>Build your compliance program and keep stay compliant as laws and regulations evolve.</p>
+          <h3>Who We Serve</h3>
+          <p>Build your compliance program and stay compliant as laws and regulations evolve.</p>
         </header>
 
         <div class="row about-cols">
@@ -194,7 +194,7 @@
                 <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">Compliance Counsel Package</a></h2>
+              <h2 class="title"><a href="#">Hospitals and Systems</a></h2>
               <p>
                 A Compliance Attorney available to stand up an effective compliance program and advice on a host of regulatory issues.
               </p>
@@ -207,7 +207,7 @@
                 <img src="assets/img/about-plan.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-list-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">Internal Auditor Package</a></h2>
+              <h2 class="title"><a href="#">Physicians and Other Provider Types</a></h2>
               <p>
                 Audit professionals capable of identifying gaps and ensuring you avoid costly regulatory findings and government investigations.
               </p>
@@ -220,7 +220,7 @@
                 <img src="assets/img/about-vision.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-eye-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">General Counsel Package</a></h2>
+              <h2 class="title"><a href="#">Health Plans and HIPAA Business Associates</a></h2>
               <p>
                 Enjoy the benefit of a General Counsel On-Demand.
               </p>
