changed tags for pics in package section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <!--li><a href="#portfolio">Portfolio</a></li-->
-          <li><a href="#team">Leadership Team</a></li>
+          <!--li><a href="#team">Leadership Team</a></li>
           <!--li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -194,10 +194,8 @@
                 <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">Hospitals and Systems</a></h2>
-              <p>
-                A Compliance Attorney available to stand up an effective compliance program and advice on a host of regulatory issues.
-              </p>
+              <h2 class="title"><a href="#">Hospitals and Urgent Care Centers</a></h2>
+              <p></p>
             </div>
           </div>
 
@@ -209,7 +207,6 @@
               </div>
               <h2 class="title"><a href="#">Physicians and Other Provider Types</a></h2>
               <p>
-                Audit professionals capable of identifying gaps and ensuring you avoid costly regulatory findings and government investigations.
               </p>
             </div>
           </div>
@@ -222,7 +219,6 @@
               </div>
               <h2 class="title"><a href="#">Health Plans and HIPAA Business Associates</a></h2>
               <p>
-                Enjoy the benefit of a General Counsel On-Demand.
               </p>
             </div>
           </div>
@@ -294,7 +290,7 @@
           <div class="col-md-4 wow fadeInUp">
             <div class="about-col">
               <div class="img">
-                <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
+                <img src="assets/img/package-mission.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">Compliance Counsel Package</a></h2>
@@ -307,7 +303,7 @@
           <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
             <div class="about-col">
               <div class="img">
-                <img src="assets/img/about-plan.jpg" alt="" class="img-fluid">
+                <img src="assets/img/package-plan.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-list-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">Internal Auditor Package</a></h2>
@@ -320,7 +316,7 @@
           <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
             <div class="about-col">
               <div class="img">
-                <img src="assets/img/about-vision.jpg" alt="" class="img-fluid">
+                <img src="assets/img/package-vision.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-eye-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">General Counsel Package</a></h2>
@@ -844,7 +840,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>Johnson Group</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+            <p>A regulatory and compliance law firm and consulting group focused on the healthcare industry and based in Minnesota.</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
