--- a/index.html
+++ b/index.html
@@ -293,9 +293,9 @@
                 <img src="assets/img/package-mission.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">Compliance Counsel Package</a></h2>
+              <h2 class="title"><a href="#">Compliance Officer Package</a></h2>
               <p>
-                A Compliance Attorney available to stand up an effective compliance program and advice on a host of regulatory issues.
+                A Compliance Attorney available to stand up an effective compliance program and advise on a host of regulatory issues.
               </p>
             </div>
           </div>
@@ -321,7 +321,7 @@
               </div>
               <h2 class="title"><a href="#">General Counsel Package</a></h2>
               <p>
-                Enjoy the benefit of a General Counsel On-Demand.
+                Enjoy the benefit of a General Counsel On-Demand. Available to answer both healthcare-specific or business-specific questions.
               </p>
             </div>
           </div>
