--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BizPage Bootstrap Template</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <title>Johnson Group Law Firm</title>
+  <meta content="Healthcare Compliance Outsourcing" name="descriptison">
+  <meta content="Compliance, Ethics, Healthcare, Medical" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
