--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- ======= Intro Section ======= -->
   <section id="intro">
     <div class="intro-container">
-      <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
+      <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel" data-interval="false">
 
         <ol class="carousel-indicators"></ol>
 
