--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     <section id="call-to-action" class="wow fadeIn">
       <div class="container text-center">
         <h3>Outsourcing Compliance & Legal</h3>
-        <p> Learn about best practices and how you can save money and lessen organizational risk by outsourcing Compliance and Legal functions.</p>
+        <p> Learn about best practices and how outsourcing compliance and legal tasks can reduce payroll expenses and mitigate organizational risk.</p>
         <a class="cta-btn" href="#">Download Here</a>
       </div>
     </section><!-- End Call To Action Section -->
