--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Johnson Group Law Firm</title>
+  <title>Law Firm for Healthcare Compliance & Regulatory Law</title>
   <meta content="Healthcare Compliance Outsourcing" name="descriptison">
   <meta content="Compliance, Ethics, Healthcare, Medical" name="keywords">
 
