--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
 
           <div class="col-md-4 wow fadeInUp">
             <div class="about-col">
-              <div class="img">
-                <img src="assets/img/package-mission.jpg" alt="" class="img-fluid">
+              <!--div class="img">
+                <!--img src="assets/img/package-mission.jpg" alt="" class="img-fluid"-->
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">Compliance Officer Package</a></h2>
@@ -302,8 +302,8 @@
 
           <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
             <div class="about-col">
-              <div class="img">
-                <img src="assets/img/package-plan.jpg" alt="" class="img-fluid">
+              <!--div class="img">
+                <img src="assets/img/package-plan.jpg" alt="" class="img-fluid"-->
                 <div class="icon"><i class="ion-ios-list-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">Internal Auditor Package</a></h2>
@@ -315,8 +315,8 @@
 
           <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
             <div class="about-col">
-              <div class="img">
-                <img src="assets/img/package-vision.jpg" alt="" class="img-fluid">
+              <!--div class="img">
+                <img src="assets/img/package-vision.jpg" alt="" class="img-fluid"-->
                 <div class="icon"><i class="ion-ios-eye-outline"></i></div>
               </div>
               <h2 class="title"><a href="#">General Counsel Package</a></h2>
