deleted white paper section

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
 
     <!-- ======= Call To Action Section ======= -->
-    <section id="call-to-action" class="wow fadeIn">
+    <!--section id="call-to-action" class="wow fadeIn">
       <div class="container text-center">
         <h3>Outsourcing Compliance & Legal</h3>
         <p> Learn about best practices and how outsourcing compliance and legal tasks can reduce payroll expenses and mitigate organizational risk.</p>
