changed learn more link

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="carousel-content">
                 <h2>A Law Firm focused on Healthcare & Regulatory Compliance.</h2>
                 <p></p>
-                <a href="#featured-services" class="btn-get-started scrollto">Learn More</a>
+                <a href="#about" class="btn-get-started scrollto">Learn More</a>
               </div>
             </div>
           </div>
