--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
 
         </div>
 
-        <div class="form">
+        <!--div class="form">
           <form action="forms/contact.php" method="post" role="form" class="php-email-form">
             <div class="form-row">
               <div class="form-group col-md-6">
